figured out that the contact element isnt taking up the entire dom

--- a/my-app/src/components/layout/Contact/Contact.css
+++ b/my-app/src/components/layout/Contact/Contact.css
@@ -200,12 +200,12 @@
         /* transform: translate(-4%, 00%); */
         width: 60%;
         border-radius: 0;
-        /* margin-left: 6rem; */
+        margin-left: 20vw;
         /* border: .10px solid red; */
     }
 
     .email {
-        width: 100%;
+        /* width: 100%; */
         display: flex;
         flex-direction: column;
         /* border: .10px solid red; */
@@ -227,6 +227,147 @@
 }
 
 @media only screen and (min-device-width: 1000px) and (max-device-width: 1366px) {
+    #contact {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        /* margin: 5vw auto 15vh; */
+        /* margin-top: 3rem; */
+    }
+
+    .skills {
+        /* margin-top: .5rem; */
+        /* margin-left: 0%; */
+        /* border: 10px solid yellow; */
+        display: flex;
+    }
+
+    
+
+    .skills-container {
+        /* margin-left: 6vw; */
+    }
+
+    .skills-images {
+        width: 100%;
+        /* border: 10px solid purple; */
+        justify-content: center;
+        align-items: center;
+    }
+
+    .skills-container ul {
+        transform: translate(0%,0%);
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-evenly;
+        max-width: 100%;
+        margin-top: 2rem;
+        /* border: 10px solid yellow; */
+        /* margin-left: 26vw; */
+
+    }
+
+
+    #form-wrapper {
+        /* transform: translate(-4%, 00%); */
+        width: 50%;
+        border-radius: 0;
+        /* margin-top: 5rem; */
+        margin-left: 25vw;
+        /* margin: 0; */
+        /* border: .10px solid red; */
+    }
+
+    .email {
+        /* width: 100%; */
+        display: flex;
+        flex-direction: column;
+        /* margin-top: 2rem; */
+    }
+
+    .email-form {
+        /* transform: translate(-4%, 0%); */
+        /* height: 290px; */
+        /* border: .10px solid red; */
+        /* width: 80vw; */
+        width: 80%;
+    }
+
+   
+}
+
+@media only screen and (min-device-width: 1366px) and (max-device-width: 2500px) {
+    #contact {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-column-gap: 10px;
+        width: 100%;
+        /* height: 100%; */
+        /* margin: 5vw auto 15vh; */
+        margin-top: 10rem;
+        border: 10px solid yellow;
+    }
+
+    .skills {
+        margin-top: .5rem;
+        /* margin-left: 0%; */
+        /* border: 10px solid yellow; */
+        display: flex;
+    }
+
+    
+
+    .skills-container {
+        margin-left: 6vw;
+        margin-top: 10rem;
+        /* box-shadow: 0 0 30px #494f653b; */
+        /* background-color: #fff; */
+        border-radius: 10px;
+    }
+
+    .skills-images {
+        width: 100%;
+        /* border: 10px solid purple; */
+        justify-content: center;
+        align-items: center;
+    }
+
+    .skills-container ul {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        /* max-width: 100%; */
+        margin-top: 2rem;
+        margin-left: 25%;
+        /* border: 10px solid yellow; */
+
+    }
+
+
+    #form-wrapper {
+        /* transform: translate(-4%, 00%); */
+        width: 40%;
+        border-radius: 0;
+        /* margin-top: 8rem; */
+        margin-left: 5rem;
+        /* margin: 0; */
+        /* border: .10px solid red; */
+    }
+
+    .email {
+        /* width: 100%; */
+        display: flex;
+        flex-direction: column;
+        margin-top: 0rem;
+    }
+
+    .email-form {
+        /* transform: translate(-4%, 0%); */
+        /* height: 290px; */
+        /* border: .10px solid red; */
+        /* width: 80vw; */
+        width: 80%;
+    }
     
 }
 
