--- a/my-app/src/components/feature/EmailForm/EmailForm.css
+++ b/my-app/src/components/feature/EmailForm/EmailForm.css
@@ -26,7 +26,7 @@
     flex-direction: column;
     -webkit-backdrop-filter: blur(10px);
     /* border: .7px solid rgba(255,255,255,.2); */
-    border: .7px solid red;
+    /* border: .7px solid red; */
     align-items: center;
     justify-content:space-evenly;
     color: #2c426a;
@@ -35,10 +35,11 @@
     /* background-image: url("http://clubsolaris.com/imgs/tips-to-take-care-of-the-beach-during-your-vacations/beach-sea-cancun-sun.png"); */
     /* background-image: url("../../../../src/assets/images/Waves.mp4"); */
     background-color: #fff;
+    box-shadow: 0 0 10px #494f653b;
 }
 
 .email {
-    border: .7px solid yellow;
+    /* border: .7px solid yellow; */
     margin-top: 5rem;
     height:100%;
     width: 100%;
