--- a/my-app/src/components/feature/SkillList/Skills.css
+++ b/my-app/src/components/feature/SkillList/Skills.css
@@ -50,7 +50,7 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
-        transform: translate(50%, 0%);
+        /* transform: translate(50%, 0%); */
         /* margin: 1em 0; */
         max-width: 45%;
         min-width: 250px;
