--- a/my-app/src/components/layout/Contact/Contact.css
+++ b/my-app/src/components/layout/Contact/Contact.css
@@ -8,7 +8,7 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-column-gap: 10px;
-    
+    height: 100vh;
 }
 
 .skills {
@@ -304,8 +304,8 @@
         width: 100%;
         /* height: 100%; */
         /* margin: 5vw auto 15vh; */
-        margin-top: 10rem;
-        border: 10px solid yellow;
+        /* margin-top: 10rem; */
+        /* border: 10px solid yellow; */
     }
 
     .skills {
@@ -313,16 +313,19 @@
         /* margin-left: 0%; */
         /* border: 10px solid yellow; */
         display: flex;
+        align-items: center;
+        justify-content: center;
     }
 
     
 
     .skills-container {
-        margin-left: 6vw;
-        margin-top: 10rem;
+        /* margin-left: 6vw; */
+        /* margin-top: 10rem; */
         /* box-shadow: 0 0 30px #494f653b; */
         /* background-color: #fff; */
         border-radius: 10px;
+        /* border: 10px solid purple; */
     }
 
     .skills-images {
@@ -348,9 +351,8 @@
         /* transform: translate(-4%, 00%); */
         width: 40%;
         border-radius: 0;
-        /* margin-top: 8rem; */
-        margin-left: 5rem;
-        /* margin: 0; */
+        margin-top: 5rem;
+        /* margin-left: 5rem; */
         /* border: .10px solid red; */
     }
 
@@ -359,6 +361,9 @@
         display: flex;
         flex-direction: column;
         margin-top: 0rem;
+        /* border: 10px solid red; */
+        align-items: center;
+        justify-content: center;
     }
 
     .email-form {
