added an abstract for the modal content

--- a/my-app/src/components/feature/Modal/Modal.scss
+++ b/my-app/src/components/feature/Modal/Modal.scss
@@ -8,6 +8,7 @@ $color-transition: 0.3s linear; */
   --width-text: 640px;
   --width-main: 1180px;
   --gray-light: #f7f8f8;
+  --gray-primary: #C4C4C4;
 }
 
 .ModalContainer {
