almost done styling the new proj cards with modal attached

--- a/my-app/src/components/feature/ProjectCard/ProjectCard.module.scss
+++ b/my-app/src/components/feature/ProjectCard/ProjectCard.module.scss
@@ -1,4 +1,4 @@
-.ProjectCard {
+/* .ProjectCard {
     flex: 1;
     margin: .5rem;
     padding: 1.25rem 1.25rem .5rem 1.25rem;
@@ -17,16 +17,106 @@
     h2 {
       font-size: 1.25rem;
     }
+  } */
+
+.projCardContainer {
+  width: 100%;
+  min-height: 50px;
+  margin-top: 10px;
+  display: grid;
+  flex-direction: row;
+  flex-wrap: wrap;
+  background-color: orangered;
+  grid-template-columns: 50% 50%;
+  
+  &:hover {
+    cursor: pointer;
   }
   
+
+  .projCardBox {
+    position: relative;
+    
+    height: 300px;
+    margin: 10px;
+    box-sizing: border-box;
+    display: inline-block;
+    overflow: hidden;
+    /* background: #ff0; */
+  
+    .imgWrapper {
+      position: relative;
+      overflow: hidden;
+
+      img {
+        max-width: 100%;
+        transition: transform 2s;
+
+        &:hover {
+          transform: scale(1.2);
+        }
+      }
+    }
+
+    .detailsBox {
+      position: absolute;
+      top: 10px;
+      left: 10px;
+      bottom: 10px;
+      right: 10px;
+      background: /* #07678E */ #2DBCB4;
+      border-radius: 18px;
+      opacity: .95;
+      transform: scaleY(0);
+      transition: transform .5s;
+
+    
+      .contentBox {
+        position: absolute;
+        /* top: 50px; */
+        /* transform: translateY(-50%); */
+        text-align: center;
+        /* padding: 15px; */
+        color: /* #f0e9dc */#fff;
+        /* border: 10px solid yellow; */
+        width: 100%;
+        height: 100%;
+        
+      
+        p {
+          font-size: 50px;
+            /* margin-top: 10vh; */
+            padding: 4rem;
+            font-family: 'Amatic SC', sans-serif;
+            color: #fff;
+            /* border: 10px solid red; */
+            /* transform: translateY(50%); */
+            width: 100%;
+            display: inline-block;
+            vertical-align: middle;
+            
+        }
+        
+      }
+    }
+  }
+}
+
+
+
+
+
+
+
+  /* 
   .Img {
     display: flex;
     align-items: center;
     align-content: center;
     justify-content: center;
-  }
+  } */
   
-  .Text {
+  /* .Text {
     padding: .75rem 0 .5rem 0;
   }
   
@@ -52,4 +142,4 @@
         font-size: 1rem;
       }
     }
-  }
+  } */
