--- a/my-app/src/components/feature/ProjectCard/ProjectCard.module.scss
+++ b/my-app/src/components/feature/ProjectCard/ProjectCard.module.scss
@@ -23,11 +23,12 @@
   width: 100%;
   min-height: 50px;
   margin-top: 10px;
-  display: grid;
+  /* display: grid; */
+  display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   background-color: orangered;
-  grid-template-columns: 50% 50%;
+  /* grid-template-columns: 50% 50%; */
   
   &:hover {
     cursor: pointer;
@@ -47,10 +48,20 @@
     .imgWrapper {
       position: relative;
       overflow: hidden;
+      
+      
 
       img {
         max-width: 100%;
         transition: transform 2s;
+        width: 100%;
+        background-size: cover;
+        background-position: center;
+        image-rendering: auto;
+        image-rendering: crisp-edges;
+        image-rendering: pixelated;
+        height: 300px;
+        
 
         &:hover {
           transform: scale(1.2);
