need to add a fade out transition for modal

--- a/my-app/src/components/feature/Modal/Modal.module.scss
+++ b/my-app/src/components/feature/Modal/Modal.module.scss
@@ -21,6 +21,16 @@
     overflow: auto;
     z-index: 999;
     box-shadow: 0 0 10px #494f653b;
+    animation: fadein .5s;
+  }
+
+  @keyframes fadein {
+    from {
+      opacity:0;
+    }
+    to {
+      opacity:1;
+    }
   }
 
   .ModalContent {
@@ -38,6 +48,7 @@
   
   .ModalOpen {
     overflow: hidden;
+    
   }
   
   .ModalHeader {
