need to fix format of cards for mobile view, and just get the thing dione

--- a/my-app/src/components/feature/ProjectPage/ProjectPage.module.scss
+++ b/my-app/src/components/feature/ProjectPage/ProjectPage.module.scss
@@ -27,6 +27,9 @@
   
     h2 {
       margin-top: .25rem;
+      font-family: 'Amatic SC', sans-serif;
+      text-align: center;
+      color:$--main-btn-color;
     }
   
     h3 {
