--- a/my-app/src/components/feature/ProjectCard/ProjectCard.module.scss
+++ b/my-app/src/components/feature/ProjectCard/ProjectCard.module.scss
@@ -20,15 +20,13 @@
   } */
 
 .projCardContainer {
-  width: 100%;
+  /* width: 100%;
   min-height: 50px;
   margin-top: 10px;
-  /* display: grid; */
   display: flex;
   flex-direction: row;
-  flex-wrap: wrap;
-  background-color: orangered;
-  /* grid-template-columns: 50% 50%; */
+  flex-wrap: wrap; */
+
   
   &:hover {
     cursor: pointer;
