--- a/my-app/src/components/layout/Landing/Landing.css
+++ b/my-app/src/components/layout/Landing/Landing.css
@@ -11,18 +11,13 @@
 /* PART A: THIS IS TO BUILD THE CARDS ASSORTED IN ROWS*/
   /* 1) Basic layout of the parent projCard-container*/
   .projCard-container {
-    width: 100%;
+    /* width: 100%;
     min-height: 50px;
     margin-top: 10px;
-    
     display: grid;
     flex-direction: row;
     flex-wrap: wrap;
-    /* border: 1px solid #BF4E30; */
-    /* background-color: orangered; */
-    grid-template-columns: 50% 50%;
-    /* grid-gap: 10px; */
-    /* grid-template-rows: auto auto auto; */
+    grid-template-columns: 50% 50%; */
     
   }
 
