--- a/my-app/src/components/feature/ProjectCard/ProjectCard.module.scss
+++ b/my-app/src/components/feature/ProjectCard/ProjectCard.module.scss
@@ -35,13 +35,11 @@
 
   .projCardBox {
     position: relative;
-    
     height: 300px;
     margin: 10px;
     box-sizing: border-box;
     display: inline-block;
     overflow: hidden;
-    /* background: #ff0; */
   
     .imgWrapper {
       position: relative;
@@ -74,7 +72,7 @@
       left: 10px;
       bottom: 10px;
       right: 10px;
-      background: /* #07678E */ #2DBCB4;
+      background: #2DBCB4;
       border-radius: 18px;
       opacity: .95;
       transform: scaleY(0);
@@ -82,12 +80,9 @@
 
       .contentBox {
         position: absolute;
-        /* top: 50px; */
-        /* transform: translateY(-50%); */
         text-align: center;
         padding-top: 8vh;
-        color: /* #f0e9dc */#fff;
-        /* border: 10px solid yellow; */
+        color: #fff;
         width: 100%;
         height: 100%;
         
@@ -100,11 +95,6 @@
           width: 100%;
           display: inline-block;
           vertical-align: middle;
-          /* border: 10px solid red; */
-          /* justify-content: center;
-          align-items: center;
-          text-align: center; */
-            
         }
         
       }
@@ -137,43 +127,27 @@
   }
 }
 
-
-
-
-
-
-  /* 
-  .Img {
-    display: flex;
-    align-items: center;
-    align-content: center;
-    justify-content: center;
-  } */
-  
-  /* .Text {
-    padding: .75rem 0 .5rem 0;
+@media (orientation: landscape) and (min-width: 480px) and (max-width: 768px) {
+  .projCardContainer .projCardBox .detailsBox .contentBox p {
+    /* border: 10px solid red; */
+    padding: 4.5rem
   }
-  
-  @media (min-width: 640px) {
-    .ProjectCard {
-      h1 {
-        font-size: 1.25rem; 
-      }
-  
-      h2 {
-        font-size: 1rem;
-      }
-    }
+}
+
+@media (orientation: landscape) and (min-width: 768px) and (max-width: 1000px) {
+  .projCardContainer .projCardBox .detailsBox .contentBox p {
+    /* border: 10px solid red; */
+    padding: 3rem
   }
+}
+
+@media (orientation: landscape) and (min-width: 1000px) and (max-width: 1366px) {
+  .projCardContainer .projCardBox .detailsBox .contentBox p {
+    /* border: 10px solid red; */
+    padding: 2rem
+  }
+}
+
+/* @media (orientation: landscape) and (min-width: 1366px) and (max-width: 2500px) {
   
-  @media (min-width: 840px) {
-    .ProjectCard {
-      h1 {
-        font-size: 2rem;
-      }
-  
-      h2 {
-        font-size: 1rem;
-      }
-    }
-  } */
+} */
