--- a/my-app/src/components/feature/ProjectPage/ProjectPage.module.scss
+++ b/my-app/src/components/feature/ProjectPage/ProjectPage.module.scss
@@ -23,6 +23,9 @@
   
     p {
       margin: 2rem 0;
+      font-family: 'Amatic SC', sans-serif;
+      color: $--txt-color;
+      font-size: 20px;
     }
   
     h2 {
