--- a/my-app/src/components/layout/LinkButton/LinkButton.module.scss
+++ b/my-app/src/components/layout/LinkButton/LinkButton.module.scss
@@ -21,6 +21,7 @@ $--txt-color: #2c426a;
     display: inline-block;
     border-radius: .2em;
     font-family: 'Otomanopee One', sans-serif;
+    letter-spacing: .08em;
     font-size: 18px;
     padding: 12px 20px;
     line-height: 120%;
