--- a/my-app/src/components/layout/Contact/Contact.css
+++ b/my-app/src/components/layout/Contact/Contact.css
@@ -15,7 +15,7 @@
     margin-top: 4rem;
     width: 100%;
     /* border: 10px solid purple; */
-    height: 100%;
+    /* height: 100%; */
     
 }
 
@@ -74,6 +74,7 @@
         width: 100%;
         border-radius: 0px;
         /* margin-top: 1rem; */
+        /* padding: 1rem; */
     }
 
     .email {
