--- a/my-app/src/components/feature/ProjectCard/ProjectCard.module.scss
+++ b/my-app/src/components/feature/ProjectCard/ProjectCard.module.scss
@@ -26,6 +26,7 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap; */
+  
 
   
   &:hover {
@@ -40,6 +41,7 @@
     box-sizing: border-box;
     display: inline-block;
     overflow: hidden;
+    box-shadow: 0 0 20px #494f653b;
   
     .imgWrapper {
       position: relative;
@@ -144,13 +146,13 @@
 @media (orientation: landscape) and (min-width: 1000px) and (max-width: 1366px) {
   .projCardContainer .projCardBox .detailsBox .contentBox p {
     /* border: 10px solid red; */
-    padding: 2rem
+    padding: 2rem;
   }
 }
 
 @media (orientation: landscape) and (min-width: 1366px) and (max-width: 2500px) {
   .projCardContainer .projCardBox .detailsBox .contentBox p {
     /* border: 10px solid red; */
-    padding: 3rem
+    padding: 3rem;
   }
 }
