--- a/my-app/src/components/layout/CardWrapper/CardWrapper.module.scss
+++ b/my-app/src/components/layout/CardWrapper/CardWrapper.module.scss
@@ -47,3 +47,13 @@ $--width-main: 1180px;
       margin: 1rem auto
     }
   }
+
+  /* @media (orientation: landscape) and (min-width: 1000px) and (max-width: 1366px) {
+   
+  } */
+  
+  @media (orientation: landscape) and (min-width: 1366px) and (max-width: 2500px) {
+    .CardWrapper {
+     padding: 8rem;
+    }
+  }
