--- a/my-app/src/components/layout/AboutMe/AboutMe.css
+++ b/my-app/src/components/layout/AboutMe/AboutMe.css
@@ -365,7 +365,7 @@ color: #2c426a;
         }
 
         .container .card p {
-            font-size: 12px;
+            font-size: 1em;
         }
 
         #bio-wrapper {
@@ -452,7 +452,7 @@ color: #2c426a;
         }
 
         .container .card p {
-            font-size: 12px;
+            font-size: 1em;
         }
 
         #bio-wrapper {
@@ -645,7 +645,8 @@ color: #2c426a;
         }
 
         .sideBio {
-            width: 50vw;
+            /* width: 50vw; */
+            width: 100%;
             /* height: 60vh; */
             /* margin-top: 20px;  */
             transform: translate(-10%, 0%);
@@ -681,6 +682,10 @@ color: #2c426a;
             font-size: 25px;
             overflow-x: hidden;
             overflow-y: auto;
+        }
+
+        .container .card p {
+            font-size: 1.5em;
         }
         
     }
