--- a/my-app/src/components/layout/Contact/Contact.css
+++ b/my-app/src/components/layout/Contact/Contact.css
@@ -156,7 +156,6 @@
         display: flex;
         flex-direction: column;
         width: 100%;
-        /* margin: 5vw auto 15vh; */
         margin-top: 5rem;
     }
 
@@ -175,17 +174,16 @@
 
     .skills-images {
         width: 100%;
+        display: flex;
+        justify-content: center;
     }
 
     .skills-container ul {
         width: 90vw;
-        /* justify-content: center; */
-        /* align-items: center; */
         transform: translate(0%,0%);
         display: flex;
         flex-wrap: wrap;
         justify-content: space-evenly;
-        /* max-width: 100%; */
     }
 
     .skills-container li {
@@ -198,7 +196,6 @@
 
 
     #form-wrapper {
-        /* transform: translate(-4%, 00%); */
         width: 60%;
         border-radius: 0;
         margin-left: 20vw;
