--- a/my-app/src/components/feature/ProjectCard/ProjectCard.module.scss
+++ b/my-app/src/components/feature/ProjectCard/ProjectCard.module.scss
@@ -42,13 +42,13 @@
     display: inline-block;
     overflow: hidden;
     box-shadow: 0 0 20px #494f653b;
+
   
     .imgWrapper {
       position: relative;
       overflow: hidden;
       
       
-
       img {
         max-width: 100%;
         transition: transform 2s;
@@ -58,13 +58,8 @@
         image-rendering: auto;
         image-rendering: crisp-edges;
         image-rendering: pixelated;
-        height: 300px;
-        
+        height: 300px;        
 
-        &:hover {
-          transform: scale(1.2);
-
-        }
       }
     }
     
@@ -103,6 +98,12 @@
     }
   }
 }
+  
+
+.projCardContainer .projCardBox:hover .imgWrapper img {
+  transform: scale(1.2);
+}
+    
 
 .projCardContainer .projCardBox:hover .detailsBox {
   transform: scaleY(1)
