--- a/my-app/src/components/layout/Footer/Footer.css
+++ b/my-app/src/components/layout/Footer/Footer.css
@@ -1,10 +1,12 @@
 
 
 
-/* .techStack-footer {
-    background: #BF4E30;
-   
-} */
+.techStack-footer {
+    /* background: #BF4E30; */
+    font-family: 'Amatic SC', sans-serif;
+    /* padding: 1rem; */
+    /* padding-bottom: 2rem; */
+}
 
 /* .skills-container {
   
