--- a/my-app/src/components/layout/LinkButton/LinkButton.module.scss
+++ b/my-app/src/components/layout/LinkButton/LinkButton.module.scss
@@ -27,7 +27,7 @@ $--txt-color: #2c426a;
     line-height: 120%;
     height: 48px;
     min-width: 48px;
-    -webkit-transition: all 250ms ease 50ms;
+    --webkit-transition: all 250ms ease 50ms;
     /* transform: translate(40%, 0%); */
     margin-top: 2rem;
     /* margin-left: 3.5rem; */
