--- a/my-app/src/components/feature/ProjectCard/ProjectCard.module.scss
+++ b/my-app/src/components/feature/ProjectCard/ProjectCard.module.scss
@@ -130,6 +130,14 @@
   }
 }
 
+//Edited 7/13:
+@media only screen and (min-width: 1000px) and (max-width: 1366px) {
+  .projCardContainer .projCardBox .detailsBox .contentBox p {
+    /* border: 10px solid red; */
+    padding: 0rem;
+  }
+}
+
 @media (orientation: landscape) and (min-width: 480px) and (max-width: 768px) {
   .projCardContainer .projCardBox .detailsBox .contentBox p {
     /* border: 10px solid red; */
