--- a/my-app/src/components/layout/AboutMe/AboutMe.css
+++ b/my-app/src/components/layout/AboutMe/AboutMe.css
@@ -525,6 +525,7 @@ color: #2c426a;
 
         .container .card {
             /* width: 70vw; */
+            max-width: 80%;
             display: flex;
             flex-direction: column;
             /* height: 200vh; */
