--- a/src/components/feature/ProjectCard/ProjectCard.module.scss
+++ b/src/components/feature/ProjectCard/ProjectCard.module.scss
@@ -42,6 +42,8 @@
     display: inline-block;
     overflow: hidden;
     box-shadow: 0 0 20px #494f653b;
+    /* border: 10px solid red; */
+    /* width:100%; */
 
   
     .imgWrapper {
@@ -58,8 +60,7 @@
         image-rendering: auto;
         image-rendering: crisp-edges;
         image-rendering: pixelated;
-        height: 300px;        
-
+        height: 300px;       
       }
     }
     
