--- a/src/components/feature/ProjectCard/ProjectCard.module.scss
+++ b/src/components/feature/ProjectCard/ProjectCard.module.scss
@@ -1,5 +1,5 @@
-/* .ProjectCard {
-    flex: 1;
+.ProjectCard {
+   /*  flex: 1;
     margin: .5rem;
     padding: 1.25rem 1.25rem .5rem 1.25rem;
     width: 80%;
@@ -16,8 +16,8 @@
   
     h2 {
       font-size: 1.25rem;
-    }
-  } */
+    } */
+  }
 
 .projCardContainer {
   /* width: 100%;
@@ -26,8 +26,10 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap; */
-  
-
+  /* border: 5px solid red; */
+  width: 100%;
+  padding: .5rem;
+ 
   
   &:hover {
     cursor: pointer;
@@ -42,8 +44,9 @@
     display: inline-block;
     overflow: hidden;
     box-shadow: 0 0 20px #494f653b;
-    /* border: 10px solid red; */
-    /* width:100%; */
+    /* border: 10px solid blue; */
+    max-width: 100%;
+    width:100%;
 
   
     .imgWrapper {
