changed card margin

--- a/src/components/feature/ProjectCard/ProjectCard.module.scss
+++ b/src/components/feature/ProjectCard/ProjectCard.module.scss
@@ -39,7 +39,7 @@
   .projCardBox {
     position: relative;
     height: 300px;
-    margin: 10px;
+    /* margin: 10px; */
     box-sizing: border-box;
     display: inline-block;
     overflow: hidden;
