need to change cards in about me to be scrollable

--- a/src/components/feature/PersonalCards/personal_card.css
+++ b/src/components/feature/PersonalCards/personal_card.css
@@ -33,6 +33,7 @@
     padding: .7rem;
    /*  flex-wrap: wrap; */
     justify-content: space-between;
+    object-fit: contain;
   }
 
   .img__container {
