--- a/src/components/feature/EmailForm/EmailForm.css
+++ b/src/components/feature/EmailForm/EmailForm.css
@@ -134,10 +134,10 @@
     }
 
     .btn-box button {
-        border: 1px solid var(--sec-bg-color);
+        border: 1px solid var( --main-btn-color);
         outline: none;
-        background: var(--main-bg-color);
-        color:#fff;
+        background: #fff;
+        color:var( --main-btn-color);
         cursor: pointer;
         /* background: transparent; */
         display: inline-block;
@@ -214,7 +214,7 @@
 
     .links a:nth-child(1):hover {
         color: var(--main-btn-color);
-        /* transition: color 500ms ease .1s; */
+        transition: color 500ms ease .1s;
         animation-name: scale;
         animation-duration: 2s;
         animation-iteration-count: infinite;
@@ -237,9 +237,7 @@
     }
     /* background: linear-gradient(to top,#00F0FF 30%, #f0e9dc 60%); */
     .links a:nth-child(2):hover {
-        /* background: blue; */
         color: var(--main-btn-color);
-        transition: color 500ms ease .1s;
         transition: color 500ms ease .1s;
         animation-name: scale;
         animation-duration: 2.5s;
@@ -250,7 +248,6 @@
     .links a:nth-child(3):hover {
         color: var(--main-btn-color);
         transition: color 500ms ease .1s;
-        transition: color 500ms ease .1s;
         animation-name: scale;
         animation-duration: 2.5s;
         animation-iteration-count: infinite;
@@ -259,7 +256,6 @@
 
     .links a:nth-child(4):hover {
         color: var(--main-btn-color);
-        transition: color 500ms ease .1s;
         transition: color 500ms ease .1s;
         animation-name: scale;
         animation-duration: 2.5s;
