added an animation to text

--- a/src/components/feature/Modal/Modal.module.scss
+++ b/src/components/feature/Modal/Modal.module.scss
@@ -33,6 +33,19 @@
     }
   }
 
+  /* .FadeOut {
+    animation: fadeout .5s;
+  }
+
+  @keyframes fadeout {
+    from {
+      opacity:1;
+    }
+    to {
+      opacity:0;
+    }
+  } */
+
   .ModalContent {
     background-color: /* $--main-bg-color */#fff;
     border-radius: 3px;
