testing out a new deploy

--- a/src/components/layout/AboutMe/AboutMe.css
+++ b/src/components/layout/AboutMe/AboutMe.css
@@ -364,8 +364,10 @@ color: #2c426a;
         .container .card {
             width: 100%;
             display: flex;
-            flex-direction: column;
-            /* height: 10; */
+            /* flex-direction: column; */
+            flex-direction: row;
+            overflow-y: hidden;
+            overflow-x: scroll;
         }
 
 
@@ -456,8 +458,10 @@ color: #2c426a;
         .container .card {
             width: 100%;
             display: flex;
-            flex-direction: column;
-           /*  height: 100%; */
+            /* flex-direction: column; */
+            flex-direction: row;
+            overflow-y: hidden;
+            overflow-x: scroll;
             
         }
 
