fixed cards back to how they were

--- a/src/components/layout/AboutMe/AboutMe.css
+++ b/src/components/layout/AboutMe/AboutMe.css
@@ -364,10 +364,7 @@ color: #2c426a;
         .container .card {
             width: 100%;
             display: flex;
-            /* flex-direction: column; */
-            flex-direction: row;
-            overflow-y: hidden;
-            overflow-x: scroll;
+            flex-direction: column;
         }
 
 
@@ -458,10 +455,8 @@ color: #2c426a;
         .container .card {
             width: 100%;
             display: flex;
-            /* flex-direction: column; */
-            flex-direction: row;
-            overflow-y: hidden;
-            overflow-x: scroll;
+            flex-direction: column;
+           /*  height: 100%; */
             
         }
 
